[package]
name = "pliced"
version = "0.1.0"
edition = "2021"

[lib]
name = "pliced"

[dependencies]
iced = { version = "0.13", features = ["canvas","tokio", "advanced"] }

plotters = { version = "0.3", optional = true }
plotters-backend = { version = "0.3", optional = true }
once_cell = "1"

[features]
default = ["plotters"]
plotters = ["dep:plotters", "dep:plotters-backend"]
