[package]
name = "pliced"
version = "0.2.0"
edition = "2024"

[lib]
name = "pliced"

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
rev = "4b075b9731f4658a885357024cc77dee10e223c3"
features = ["canvas", "advanced"]

[dependencies]
plotters = { version = "0.3" }
plotters-backend = { version = "0.3" }
once_cell = "1"
